# llm-journey

./: .gitignore  README.md  dataset_info.json  pyproject.toml
01-data/: prepare_data.py
02-train/: train.sh
02-train/configs/: qwen1.5b_lora_sft.yaml
03-eval/: evaluate.py
04-serve/: Modelfile  deploy.sh
05-notes/: exp-001.md
docs/: llm-journey-design.md
